# MongoDB-Semantic-Search-Demo

./: .env  .gitignore  .replit  .sesskey  FastHTML.md  README.md  adv_app.py  constraints.txt  fasthtml_example.py  import_data.py  load_data.py  main.py  monster-ui.md  pyproject.toml  rag.py  rag_app.py  requirements.txt  scrape_and_store.py  search.py  search_app.py  settings.py  temp.py  ui.py  utils.py  vector_embeddings.py
data/: utodos.db-shm  utodos.db-wal
