
[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
python-fasthtml = "^0.10.3"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
bson = "^0.5.10"
llama-index-core = "^0.12.22"
llama-index-llms-openai = "^0.3.25"
llama-index-vector-stores-mongodb = "^0.6.0"
trafilatura = "^2.0.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
