[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bson>=0.5.10",
    "llama-index-core>=0.12.30",
    "llama-index-vector-stores-mongodb>=0.6.0",
    "pymongo>=4.12.0",
    "python-fasthtml>=0.12.12",
]
